--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,21 +6,43 @@ build-backend = "hatchling.build"
 name = "kafka-viz"
 version = "0.1.0"
 description = "Tool for visualizing Kafka microservices architecture"
+readme = "README.md"
+authors = [{name = "Emil Holmegaard"}]
+license = "MIT"
 requires-python = ">=3.8"
 dependencies = [
+    "graphviz>=0.20.1",
     "typer>=0.9.0",
     "rich>=13.7.0",
-    "regex>=2023.12.25"
+    "regex>=2023.12.25",
+    "avro-python3>=1.10.2",
+    "prettytable>=3.9.0",
+    "pyyaml>=6.0"
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0.0",
-    "pytest-cov>=4.0.0",
-    "black>=23.0.0",
-    "isort>=5.0.0",
-    "mypy>=1.0.0"
+    "pytest>=7.0",
+    "pytest-cov>=4.0",
+    "black>=22.0",
+    "isort>=5.0",
+    "mypy>=1.0",
+    "flake8>=6.0"
 ]
 
 [project.scripts]
 kafka-viz = "kafka_viz.cli:app"
+
+[tool.black]
+line-length = 88
+target-version = ['py38']
+
+[tool.isort]
+profile = "black"
+line_length = 88
+
+[tool.mypy]
+python_version = "3.8"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
