--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,17 @@ build-backend = "setuptools.build_meta"
 name = "sokrates-kafka-viz"
 version = "0.1.0"
 description = "Tool for visualizing Kafka microservices architecture using static code analysis"
+requires-python = ">=3.8"
 authors = [
-    {name = "Emil Holmegaard", email = "emilholmegaard@gmail.com"},
+    {name = "Emil Holmegaard", email = "emilholmegaard@gmail.com"}
 ]
-dependencies = []
+dynamic = ["dependencies"]
+
+[tool.setuptools]
+packages = ["kafka_viz"]
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
 
 [project.optional-dependencies]
 dev = [
