--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,11 +24,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .[dev]
+        pip install -e .[dev]
         
     - name: Run tests
       run: |
-        python -m pytest --cov=kafka_viz tests/
+        python -m pytest tests/ --cov=kafka_viz --cov-report=term-missing
         
     - name: Type checking
       run: |
@@ -54,7 +54,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .[dev]
+        pip install -e .[dev]
     
     - name: Integration tests
       run: |
