--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dev = [
     "isort>=5.0.0",
     "flake8>=6.0.0",
     "networkx>=3.1.0",
+    "javalang>=0.13.0",
 ]
 
 [tool.pytest.ini_options]
