--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dev = [
     "flake8>=6.0.0",
     "networkx>=3.1.0",
     "javalang>=0.13.0",
+    "requests>=2.32.0"
 ]
 
 [tool.pytest.ini_options]
