--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dev = [
     "flake8>=6.0.0",
     "networkx>=3.1.0",
     "javalang>=0.13.0",
-    "requests>=2.32.0"
+    "requests>=2.32.0",
+    "types-requests>=2.32.0"
 ]
 
 [tool.pytest.ini_options]
