--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ dev = [
     "javalang>=0.13.0",
     "requests>=2.32.0",
     "types-requests>=2.32.0",
+    "rich-click>=1.6.1",
+    "rich>=13.3.1",
+    "click>=8.1.3"
 ]
 
 [tool.pytest.ini_options]
