--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dev = [
     "networkx>=3.1.0",
     "javalang>=0.13.0",
     "requests>=2.32.0",
+    "responses>=0.14.0",
     "types-requests>=2.32.0",
 ]
 
