add all version of output files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,6 @@ dmypy.json
 cython_debug/
 
 # Output file / Debug
-analysis_output.json
-architecture.html
-debug.txt
+analysis_output*
+architecture*
+debug*
